--- a/npm-audit.html
+++ b/npm-audit.html
@@ -55,7 +55,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
-                            November 24th 2020, 5:56:33 pm
+                            January 23rd 2021, 3:55:32 am
                         </h5>
                         <p class="card-text">Last updated</p>
                     </div>
